Updating bugs and Optimized

--- a/r/appsettings.json
+++ b/r/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data source = AKHMEDOV-SHAHZO;initial catalog = Sunday; integrated security = true"
+    "DefaultConnection": "Data source = AKHMEDOV-SHAHZO;initial catalog = Sunday2; integrated security = true"
   },
   "Logging": {
     "LogLevel": {
